--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.2",
     "bootstrap": "^4.6.0",
+    "jquery": "^3.6.0",
     "mobx": "^6.1.7",
     "mobx-react-lite": "^3.2.0",
     "node-sass": "^5.0.0",
+    "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.0",
     "react-dom": "^17.0.1",
